--- a/ReadMe.adoc
+++ b/ReadMe.adoc
@@ -1,58 +1,38 @@
-:Author: azmm12
-:Email: {AuthorEmail}
-:Date: 28/07/2022
-:Revision: version#
-:License: Public Domain
+= Project: {IOT_Task_2}
 
-= Project: {Project}
+=== Author: azmm12.
+=== Email: {Abdulazizmmutiri@gmail.com} .
+=== Date: 28/07/2022 .
+=== Revision: version#1 .
+=== License: Public Domain .
 
-Describe your project
+== Description of project:
+Controlling Servo motor by web page using html and javascript.
 
-== Step 1: Installation
-Please describe the steps to install this project.
+==Installation steps:
 
-For example:
-
-1. Open this file
-2. Edit as you like
-3. Release to the World!
-
-== Step 2: Assemble the circuit
-
-Assemble the circuit following the diagram layout.png attached to the sketch
-
-== Step 3: Load the code
-
-Upload the code contained in this sketch on to your board
+1. install servo motor library and Wifi library.
+2. type arduino code.
+3. type HTML code.
+4. upload arduino code on esp32.
+5. Copy IP adress from serial monitor of arduino and paste it on the browser.
+6. Change and control the degree of the servo motor.
 
 === Folder structure
 
 ....
- sketch123                => Arduino sketch folder
-  ├── sketch123.ino       => main Arduino file
-  ├── schematics.png      => (optional) an image of the required schematics
-  ├── layout.png          => (optional) an image of the layout
-  └── ReadMe.adoc         => this file
+ IOT_Task_2
+  └── ReadMe.adoc      => this file
+  └── Servo_Web.ino      => Arduino Code
+  └── Servo_Web.html      => html & javascript code
+  └── Servo_Web.html      => html & javascript code
 ....
-
-=== License
-This project is released under a {License} License.
 
 === Contributing
 To contribute to this project please contact azmm12 https://id.arduino.cc/azmm12
-
-=== BOM
-Add the bill of the materials you need for this project.
-
-|===
-| ID | Part name      | Part number | Quantity
-| R1 | 10k Resistor   | 1234-abcd   | 10
-| L1 | Red LED        | 2345-asdf   | 5
-| A1 | Arduino Zero   | ABX00066    | 1
-|===
-
 
 === Help
 This document is written in the _AsciiDoc_ format, a markup language to describe documents.
 If you need help you can search the http://www.methods.co.nz/asciidoc[AsciiDoc homepage]
 or consult the http://powerman.name/doc/asciidoc[AsciiDoc cheatsheet]
+
