--- a/ReadMe.adoc
+++ b/ReadMe.adoc
@@ -1,4 +1,4 @@
-= Project: {IOT_Task_2}
+= Project: {Connecting-ESP32-with-Webpage}
 
 === Author: azmm12.
 === Email: {Abdulazizmmutiri@gmail.com} .
@@ -26,12 +26,3 @@ Controlling Servo motor by web page using html and javascript.
   └── Servo_Web.ino      => Arduino Code
   └── Servo_Web.html      => html & javascript code
 ....
-
-=== Contributing
-To contribute to this project please contact azmm12 https://id.arduino.cc/azmm12
-
-=== Help
-This document is written in the _AsciiDoc_ format, a markup language to describe documents.
-If you need help you can search the http://www.methods.co.nz/asciidoc[AsciiDoc homepage]
-or consult the http://powerman.name/doc/asciidoc[AsciiDoc cheatsheet]
-
